--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.6.2",
     "tailwind-scrollbar-hide": "^4.0.0",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
